add excepciones para transacciones add war file

--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
   </dependencies>
 
   <build>
-    <finalName>RegistroAgricola</finalName>
+    <finalName>MonederoVirtual</finalName>
     <plugins>
       <!-- Plugin para compilar JSPs -->
       <plugin>
