--- a/pom.xml
+++ b/pom.xml
@@ -47,12 +47,14 @@
       <version>5.6.15.Final</version>
     </dependency>
 
-    <!-- PostgreSQL Driver -->
+
+    <!-- Derby -->
     <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>42.5.0</version>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derby</artifactId>
+      <version>10.14.2.0</version>
     </dependency>
+
 
     <!-- Log4j (opcional, para logging) -->
     <dependency>
@@ -60,12 +62,14 @@
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>RELEASE</version>
       <scope>compile</scope>
     </dependency>
+
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
