--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,26 @@
       <version>4.11.0</version>
       <scope>compile</scope>
     </dependency>
+
+    <!-- PDFBox Core Library -->
+    <dependency>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>pdfbox</artifactId>
+      <version>2.0.27</version> <!-- Usa la última versión disponible -->
+    </dependency>
+    <!-- PDFBox Tools (Opcional, para soporte de imágenes adicionales como TIFF) -->
+    <dependency>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>pdfbox-tools</artifactId>
+      <version>2.0.27</version>
+    </dependency>
+    <!-- FontBox (necesario para el manejo de fuentes en PDFBox) -->
+    <dependency>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>fontbox</artifactId>
+      <version>2.0.27</version>
+    </dependency>
+
   </dependencies>
 
   <build>
